[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmnsopt"
version = "0.2.0"
description = "GMNS-native transportation optimization testbed: reproducible, visual, data-grounded, progressively harder benchmark cases (shortest path -> assignment -> ODME -> signal -> resilience) for open-source & commercial solvers, ML-for-optimization, and RL/control."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "gmnsopt contributors" }]
keywords = ["GMNS", "transportation", "optimization", "traffic-assignment", "ODME",
            "benchmark", "operations-research", "networkx", "HiGHS"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = ["numpy>=1.21", "scipy>=1.7", "networkx>=2.6", "PyYAML>=5.4"]

[project.optional-dependencies]
viz = ["pandas>=1.3", "matplotlib>=3.4"]
solvers = ["pyomo>=6.0", "highspy>=1.5"]        # optional Tier-1 modeling + HiGHS bindings
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
gmns-opt = "gmns_opt.cli:main"

[project.urls]
Source = "https://github.com/asu-trans-ai-lab/gmnsopt"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gmns_opt*"]
